# cctools-port

./: .gitignore  .travis.yml  README.md  package.sh
cctools/: Makefile  Makefile.am  Makefile.in  autogen.sh  cctools-ld64.workspace  cctools.project  configure  configure.ac  ld64.project  ltmain.sh
cctools/ar/: Makefile  Makefile.am  Makefile.in  ar.c  archive.c  archive.h  contents.c  misc.c  notes
cctools/as/: Makefile  Makefile.am  Makefile.in  app.c  app.h  arm.c  as.c  as.h  atof-generic.c  atof-ieee.c  atof-ieee.h  bignum.h  driver.c  dwarf2dbg.c  expr.c  expr.h  fixes.c  flonum-copy.c  flonum-mult.c  flonum.h  frags.c  frags.h  i386.c  i860.c  input-file.c  input-scrub.c  layout.c  m88k.c  md.h  notes  obstack.c  obstack.h  ppc.c  read.c  read.h  relax.h  sections.c  sparc.c  struc-symbol.h  symbols.c  (+2 more)
cctools/as/arm/: Makefile.am  Makefile.in
cctools/as/i386/: Makefile.am  Makefile.in
cctools/as/ppc/: Makefile.am  Makefile.in
cctools/as/ppc64/: Makefile.am  Makefile.in
cctools/as/x86_64/: Makefile.am  Makefile.in
cctools/efitools/: Makefile.am  Makefile.in  makerelocs.c  mtoc.c
cctools/gprof/: gprof.c
cctools/include/: Makefile  notes
cctools/include/architecture/i386/: fpu.h  frame.h
cctools/include/architecture/m88k/: fp_regs.h  reg_help.h
cctools/include/coff/: bytesex.h  filehdr.h
cctools/include/foreign/: Availability.h  strings.h  unistd.h
cctools/include/foreign/CommonCrypto/: CommonDigest.h
cctools/include/foreign/i386/: _mcontext.h  _types.h  endian.h  signal.h  types.h
cctools/include/foreign/libkern/: OSAtomic.h  _OSByteOrder.h
cctools/include/foreign/mach/: clock_types.h  mach_init.h
cctools/include/foreign/machine/: _limits.h  _types.h  endian.h  types.h
cctools/include/foreign/os/: lock_private.h
cctools/include/foreign/ppc/: types.h
cctools/include/foreign/sys/: _types.h  attr.h  dirent.h  sysctl.h
cctools/include/llvm-c/: Disassembler.h
cctools/include/mach/: machine-cctools.h  machine.h
cctools/include/mach-o/: arch.h  dyld.h  dyld_priv.h  getsect.h  loader.h  redo_prebinding.h  sarld.h  swap.h
cctools/include/mach-o/hppa/: swap.h
cctools/include/mach-o/i860/: swap.h
cctools/include/mach-o/m68k/: swap.h
cctools/include/mach-o/m88k/: swap.h
cctools/include/mach-o/sparc/: swap.h
cctools/include/mach/arm/: _structs.h  thread_state.h  thread_status.h
cctools/include/mach/i386/: _structs.h  fp_reg.h  thread_state.h  thread_status.h
cctools/include/mach/m88k/: thread_status.h
cctools/include/mach/ppc/: _structs.h  thread_status.h
cctools/include/modules/: mach-o.modulemap
cctools/include/standalone/: getsect.h  libsa.h
cctools/include/stuff/: allocate.h  arch.h  args.h  best_arch.h  breakout.h  bytesex.h  crc32.h  depinfo.h  diagnostics.h  errors.h  execute.h  guess_short_name.h  hash_string.h  hppa.h  llvm.h  lto.h  macosx_deployment_target.h  ofile.h  port.h  print.h  reloc.h  rnd.h  symbol_list.h  unix_standard_mode.h  version_number.h  vm_flush_cache.h
cctools/include/sys/: cdefs.h
cctools/ld/: 4byte_literals.h  8byte_literals.h  Makefile  Makefile.am  arm_reloc.h  coalesced_sections.h  cstring_literals.h  dylibs.h  fvmlibs.h  generic_reloc.h  hppa_reloc.h  i860_reloc.h  indirect_sections.h  layout.c  layout.h  ld.h  literal_pointers.h  m88k_reloc.h  mod_sections.h  notes  objects.h  pass1.h  pass2.h  ppc_reloc.h  sections.h  sets.h  sparc_reloc.h  specs.h  symbols.h  uuid.h
cctools/ld64/: Makefile.am  Makefile.in  configure.ac
cctools/ld64/doc/man/: Makefile.am  Makefile.in
cctools/ld64/src/: Makefile.am  Makefile.in  configure.h  create_configure
cctools/ld64/src/3rd/: Makefile.am  Makefile.in  compat_corecrypto.h  find_executable.c  helper.c  helper.h  ld64_llvm_lto.h  qsort_r.c  qsort_r.h  reallocf.c  reallocf.h  sha1.c  sha1.h  sha256.c  sha256.h  (+5 more)
cctools/libmacho/: Makefile.am  Makefile.in  arch.c  getsecbyname.c  slot_name.c
cctools/libobjc2/: Makefile.am  Makefile.in  arc.m  block_to_imp.c  loader.c  lock.h  objc_msgSend.x86-32.S
cctools/libobjc2/objc/: Protocol.h  toydispatch.h
cctools/libobjc2/opts/: Makefile
cctools/libstuff/: Makefile  Makefile.am  Makefile.in  SymLoc.c  apple_version.c  arch.c  args.c  best_arch.c  breakout.c  bytesex.c  checkout.c  depinfo.c  diagnostics.c  dylib_roots.c  dylib_table.c  emulated.c  errors.c  execute.c  fatal_arch.c  fatals.c  get_arch_from_host.c  get_toc_byte_sex.c  guess_short_name.c  llvm.c  lto.c  macosx_deployment_target.c  notes  ofile.c  port.c  reloc.c  rnd.c  seg_addr_table.c  swap_headers.c  symbol_list.c  version_number.c  writeout.c  xcode.c
cctools/libtapi/: CMakeLists.txt  LICENSE.TXT  Makefile.am  Readme.md
cctools/libtapi/include/: CMakeLists.txt
cctools/libtapi/lib/: CMakeLists.txt
cctools/libtapi/tools/: CMakeLists.txt
cctools/m4/: llvm.m4
cctools/man/: Makefile  Makefile.am  Makefile.in  NSModule.3  NSObjectFileImage.3  NSObjectFileImage_priv.3  arch.3  as.1  bitcode_strip.1  codesign_allocate.1  dyld.1  dyld.3  dyld_debug.3  get_end.3  getsectbyname.3  kld.3  libsyminfo.3  libtool.1  lipo.1  llvm-otool.1  mtoc.1  nm.1  notes  otool-classic.1  otool.1  pagestuff.1  redo_prebinding.3  strings.1  strip.1
cctools/misc/: Makefile  Makefile.am  Makefile.in  bitcode_strip.c  checksyms.c  cmpdylib.c  codesign_allocate.c  ctf_insert.c  depinfo.c  indr.c  inout.c  install_name_tool.c  libtool.c  lipo.c  nm.c  notes  pagestuff.c  redo_prebinding.c  seg_hack.c  segedit.c  size.c  strings.c  strip.c  vtool.c
cctools/otool/: Makefile  Makefile.am  Makefile.in  arm64_disasm.c  arm64_disasm.h  arm_disasm.c  arm_disasm.h  coff_print.c  dyld_bind_info.c  dyld_bind_info.h  hppa_disasm.c  hppa_disasm.h  i386_disasm.c  i386_disasm.h  i860_disasm.c  i860_disasm.h  m68k_disasm.c  m68k_disasm.h  m88k_disasm.c  m88k_disasm.h  main.c  notes  ofile_print.c  ofile_print.h  otool.h  ppc_disasm.c  ppc_disasm.h  print_bitcode.c  print_objc.c  print_objc2_32bit.c  print_objc2_64bit.c  print_objc2_util.c  print_objc2_util.h  sparc_disasm.c  sparc_disasm.h
cctools/otool-wrapper/: Makefile.am  Makefile.in  main.c
(+165 files in other folders)
